--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -66,3 +66,13 @@ button:focus-visible {
     background-color: #f9f9f9;
   }
 }
+body {
+  background-image: url("/public/background-Image.jpg");
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  overflow: hidden;
+}
